Major Update -Update style of webpage -fix overflow issue -fix grid layout -fix operation issue where previous operation would be saved after equals was pressed -Add footer and header

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body, html{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background: linear-gradient(to top, red, green);
+    background-color: #E6E6FA;
     overflow: hidden;
 }
 
@@ -18,22 +18,51 @@ button {
     align-items: center;
     justify-content: center;
     font-size: 20px;
+    border-radius: 25px;
 }
 
+header{
+    display: flex;
+    width: 100%;
+    height: 10vw;
+    padding: 10px;
+    border: 5px solid #CBC3E3;
+    padding-left: 150px;
+    justify-content: left;
+    align-items: center;
+    font-size: 50px;
+    margin-bottom: 5vw;
+}
+
+footer{
+    display: flex;
+    flex: 0 0 auto;
+    width: 100vw;
+    margin-top: auto;
+    justify-content: center;
+    padding: 10px;
+    gap: 10px;
+}
+
+footer img{
+    display: block;
+    height: 30px;
+    width: 30px;
+    object-fit: cover;
+}
 
 /* ID CUSTOMIZATION */
 #container {
     display: flex;
-    background-color: lightcoral;
+    background-color: #add8e6;
     height: 500px;
     width: 500px;
     justify-content: center;
     align-items: flex-end;
-    padding-bottom: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
-    border: 6px solid rgb(196, 181, 26);
+    padding: 10px;
+    border: 6px solid #8AC1DA;
     flex-wrap: wrap;
+    border-radius: 10%;
 }
 
 #SCREEN{
@@ -43,40 +72,50 @@ button {
     height: 25%;
     justify-content: flex-end;
     align-items: flex-end;
+    padding-right: 50px;
+    padding-left: 30px;
     font-size: 40px;
+    border-radius: 50px;
+    overflow:scroll;
 }
 
 
 #BUTTONS {
     display: grid;
     grid-gap: 5px;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(4,1fr);
+    grid-template-columns: repeat(5,1fr);
     width: 100%;
     height: 70%;
-    background-color: magenta;
     flex-wrap: wrap;
+    border-radius: 10%;
+    grid-template-areas:
+    "nine eight seven clear clearAll"
+    "six five four multiply divide"
+    "three two one subtract add"
+    "zero equals equals point add";
 }
 
 /* CLASS CUSTOMIZATION */
 
-.numbers{
-    display: flex;
+.number9{grid-area: nine;}
+.number8{grid-area: eight;}
+.number7{grid-area: seven;}
+.operationsce{grid-area: clear;}
+.operations←{grid-area: clearAll;}
+.number6{grid-area: six;}
+.number5{grid-area: five;}
+.number4{grid-area: four;}
+.operationsx{grid-area: multiply;}
+.operations÷{grid-area: divide;}
+.number3{grid-area: three;}
+.number2{grid-area: two;}
+.number1{grid-area: one;}
+.operations-{grid-area: subtract;}
+.operationsAdd{grid-area: add;}
+.number0{grid-area: zero;}
+.operationsEqual{grid-area: equals;}
+.operationsPoint{grid-area: point;
+font-size: 30px;}
 
-
-}
-
-.operations{
-    display: flex;
-    
-
-}
-
-.add{
-    display: flex;
-    height: 150px;
-    width: 50px;
-    background-color: aliceblue;
-}
 
 
